[package]
name = "lorem"
description = "Lorem Ipsun generator"
version = "0.1.0"
authors = ["alt-art <pedromendescraft@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
glib = "0.10.2"
gtk = "0.9.2"
gdk = "0.13.2"
gio = "0.9.1"

[package.metadata.deb]
maintainer = "Pedro Mendes <pedromendescraft@gmail.com>"
copyright = "2020, Pedro Mendes <pedromendescraft@gmail.com>"
license-file = ["LICENSE", "3"]
extended-description = "Lorem Ipsum generator for prototype desing"
section = "utility"
priority = "optional"
assets = [
    # Binary
    ["target/release/lorem", "/usr/bin/", "111"],
    # .Desktop
    ["resources/lorem.desktop", "/usr/share/applications/","644"],
    # Icon
    ["resources/lorem.svg", "/usr/share/icons/hicolor/scalable/apps/","644"]
]