[package]
name = "lorem"
description = "Lorem Ipsun generator"
version = "0.2.0"
authors = ["alt-art <pedromendescraft@gmail.com>"]
repository="https://github.com/alt-art/lorem"
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
glib = "0.14.2"
gtk = "0.14.0"
gdk = "0.14.0"
gio = "0.14.0"

[package.metadata.deb]
maintainer = "Pedro Mendes <pedromendescraft@gmail.com>"
copyright = "2020, Pedro Mendes <pedromendescraft@gmail.com>"
license-file = ["LICENSE", "3"]
extended-description = "Lorem Ipsum generator for prototype desing"
section = "utility"
priority = "optional"
assets = [
    # Binary
    ["target/release/lorem", "/usr/bin/", "111"],
    # .Desktop
    ["resources/lorem.desktop", "/usr/share/applications/","644"],
    # Icon
    ["resources/lorem.svg", "/usr/share/icons/hicolor/scalable/apps/","644"]
]